  extra factor levels in prediction. Slightly differs from predict.gam, in 
  setting effect to zero, rather than NA.

* fix to NCV handling of dropped NA points - previously could end up with
  different numbers of predict and drop neighbourhoods. Thanks to Nicole
  Augustin.	

* XWXd fix for row col interchange bug introduced with long vector support in 
  1.9-1.

1.9-1

* Revised bam discrete code to allow indexing vectors to be long vectors, 
  thereby allowing much larger datasets to be used. n limit is still 
  .Machine$integer.max.

* Revised C code underlying mvn family to allow larger problems, via use of 
  R long vectors. 

* Revised gfam to work correctly with bam(...,discrete=FALSE). Subsetting 
  in bgam.fit was incorrect for gfam. Thanks to Dave Miller for reporting it. 

* Correction of ziplss residual computation - incorrect probability of non
  zero used. Thanks to Xiao Liang. 

* correction of ginla integration weights (correcting typo from Rue et al. 
	2009). Thanks to Paul Van Dam-Bates.

* C code modification to remove some new compiler warnings. 

1.9-0

*** NCV smoothing parameter estimation now available for most models. See ?NCV.

*** 'gfam' allows reponse variables to be from several different families. 

* Restriction that number of coefficients must be fewer than number of data 
  removed. 

* Fix to tensor product constructor to allow matrix factor arguments to be 
  handled correctly (previously failed). Thanks to Dave Miller.

* removed argument 'pers' from 'plot.gam' (deprecated since 1.8-23, Nov 2017).

* removed "nlm.fd" optimizer (deprecated since 1.8-19, Sept 2017). 

* removed discrete method prediction from discrete bam objects fitted 
  before 1.8-32 (deprecated since then). 


* 'multinom' variance fix for K>=3 cases. A counter was initialized in the wrong
  place. Thanks to Max Goplerud for finding and reporting this.

* NCV variance estimation improvements + na handling.

* 'in.out' argument added for 'bam'.
