@@ -60,6 +60,9 @@ better done with .Call
 * XWXd fix for row col interchange bug introduced with long vector support in 
   1.9-1.
 
+* zoom in bfgs modified so that start values always the same to avoid
+  occasional step failures from repeatedly changing initial values.
+
 1.9-1
 
 * Revised bam discrete code to allow indexing vectors to be long vectors, 
